[gd_scene load_steps=3 format=3 uid="uid://login_popup_001"]

[ext_resource type="Theme" path="res://default_theme.tres" id="1"]
[ext_resource type="Script" path="res://login_popup.gd" id="2"]

[node name="LoginPopup" type="Panel"]
visible = false
z_index = 200
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -300.0
offset_right = 350.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme = ExtResource("1")
theme_type_variation = &"StyledPopup"
script = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_type_variation = &"PopupVBox"

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Welcome to GoA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sign in to save your progress in the cloud"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HSeparator1" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GoogleButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"PopupButton"
text = "Sign in with Google"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OrLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "or create an account"
horizontal_alignment = 1

[node name="UsernameContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="UsernameLabel" type="Label" parent="MarginContainer/VBoxContainer/UsernameContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Username:"
vertical_alignment = 1

[node name="UsernameInput" type="LineEdit" parent="MarginContainer/VBoxContainer/UsernameContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter username"
max_length = 20

[node name="PasswordContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PasswordLabel" type="Label" parent="MarginContainer/VBoxContainer/PasswordContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Password:"
vertical_alignment = 1

[node name="PasswordInput" type="LineEdit" parent="MarginContainer/VBoxContainer/PasswordContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter password"
secret = true
max_length = 50

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 15
alignment = 1

[node name="CreateAccountButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_type_variation = &"PopupButton"
text = "Create Account"

[node name="LoginButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_type_variation = &"PopupButton"
text = "Login"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SkipButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"PopupButton"
text = "Skip (Play Offline)"

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
